# MarioKartCentral

./: .env-example  .gitignore  CONTRIBUTING.MD  LICENSE  MarioKartCentral.code-workspace  README.md  docker-compose.yml  duckdb-web.Dockerfile  install.sh  package-lock.json  pyrightconfig.json
.devcontainer/: Dockerfile  (+3 more)
src/backend/: README.md  api.Dockerfile  pyproject.toml  requirements.txt  worker.Dockerfile
src/backend/api/: app.py  appsettings.py  auth.py  data.py  settings.py
src/backend/api/auth/: __init__.py  permissions.py
src/backend/api/endpoints/: admin.py  authservice.py  mkcv1importer.py  moderation.py  moderator.py  notifications.py  player_bans.py  player_registry.py  posts.py  records.py  redisservice.py  roleservice.py  s3service.py  team_registry.py  time_trials.py  tournament_placements.py  tournament_registration.py  tournaments.py  user_settings.py  userservice.py  verification.py
src/backend/api/utils/: middleware.py  notifications.py  responses.py  schema_gen.py  word_filter.py
src/backend/common/: discord.py  emails.py  gamedata.py  ip_api.py  logging_setup.py  telemetry.py
src/backend/common/assets/: game_data.json
src/backend/common/auth/: __init__.py  permissions.py  roles.py  series_permissions.py  series_roles.py  team_permissions.py  team_roles.py  tournament_permissions.py  tournament_roles.py
src/backend/common/config/: __init__.py  common.py  competitive.py  countries.py  game_data.py  records.py
src/backend/prometheus/: prometheus.yml
src/backend/tests/: mocks.py
src/backend/worker/: app.py  data.py  settings.py
(+720 files in other folders)
